templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP                   # default; reachable only INSIDE the cluster
  selector:
    app: shortly
    component: api                  # <- matches the pods from Lab 03
  ports:
    - port: 3000                    # the Service's port
      targetPort: 3000              # the container's port
